--- a/foot/src/main/resources/templates/user/signin/SigninUser.html
+++ b/foot/src/main/resources/templates/user/signin/SigninUser.html
@@ -61,7 +61,7 @@
                 <div class="col-12">
                   <!-- input -->
                   <label for="formSigninEmail" class="form-label visually-hidden" >아이디</label>
-                  <input type="text" class="form-control" id="userId" name="userId" placeholder="아이디" required  value="admin"/>
+                  <input type="text" class="form-control" id="userId" name="userId" placeholder="아이디" required  value="admin1"/>
                   <span id="userIdError" style="color: red; font-size: 10px;"></span>
                 </div>
                 <div class="col-12">
@@ -69,7 +69,7 @@
                   <div class="password-field position-relative">
                     <label for="formSigninPassword" class="form-label visually-hidden">비밀번호</label>
                     <div class="password-field position-relative">
-                      <input type="password" class="form-control fakePassword" id="userPassword" name ="userPassword" value="admin12!"
+                      <input type="password" class="form-control fakePassword" id="userPassword" name ="userPassword" value="1234"
                         placeholder="*****" required />
                       <span><i class="bi bi-eye-slash passwordToggler"></i></span>
                       <span id="userPasswordError" style="color: red; font-size: 10px;"></span>
